--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						GNB, 슬라이드, 게시판 탭 스크립트를 작성하였습니다.<br>
 						메뉴들을 메인페이지에 배치하여 사용자가 쉽게 접근할 수 있도록 만들었습니다.
 					</p>
-					<a href="">바로가기</a>
+					<a href="https://JxYxxng.github.io/project1">바로가기</a>
 					<a href="" class="port_tab">자세히보기</a>
 				</div>
 			</div>
@@ -232,7 +232,7 @@
 						GNB와 탭메뉴 스크립트 작업을 하였습니다.<br>
 						고정 메뉴와 TOP 버튼을 만들어 사용자가 페이지를 쉽고 이동할 수 있도록 구현하였습니다.<br>
 					</p>
-					<a href="">바로가기</a>
+					<a href="https://JxYxxng.github.io/project2">바로가기</a>
 					<a href="" class="port_tab">자세히보기</a>
 				</div>
 			</div>
@@ -309,7 +309,7 @@
 						GNB, 키비주얼 슬라이드 스크립트를 작성하였습니다.<br>
 						사용자가 제품정보에 쉽게 접근할 수 있도록 메인페이지 제작하였습니다.<br>
 					</p>
-					<a href="">바로가기</a>
+					<a href="https://JxYxxng.github.io/project3">바로가기</a>
 					<a href="" class="port_tab">자세히보기</a>
 				</div>
 			</div>
@@ -386,7 +386,7 @@
 						GNB 스크립트를 작성하였습니다.<br>
 						사용자가 메뉴얼에 쉽게 접근할 수 있도록 메인페이지 제작하였습니다.
 					</p>
-					<a href="">바로가기</a>
+					<a href="https://JxYxxng.github.io/project4">바로가기</a>
 					<a href="" class="port_tab">자세히보기</a>
 				</div>
 			</div>
