--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
 						Adobe XD / Photoshop<br>
 						HTML<br>
 						CSS / CSS3 / Flex CSS<br>
-						JavaScript / DOM / jQuery Plugins<br>
-						AJAX Data<br>
+						JavaScript / jQuery Plugins<br>
 					</p>
 				</div>
 				<div class="img"><img src="images/mobile1.gif" alt="모바일1"></div>
@@ -248,9 +247,8 @@
 					<p class="text2">
 						Photoshop<br>
 						HTML<br>
-						CSS / CSS3 / Flex CSS<br>
-						JavaScript / DOM / jQuery Plugins<br>
-						AJAX Data<br>
+						CSS / CSS3<br>
+						JavaScript / jQuery Plugins<br>
 					</p>
 				</div>
 				<div class="img"><img src="images/mobile2.gif" alt="모바일2"></div>
@@ -326,8 +324,7 @@
 						Adobe XD / Photoshop<br>
 						HTML<br>
 						CSS / CSS3 / Flex CSS<br>
-						JavaScript / DOM / jQuery Plugins<br>
-						AJAX Data<br>
+						JavaScript / jQuery Plugins<br>
 					</p>
 				</div>
 				<div class="img"><img src="images/mobile3.gif" alt="모바일3"></div>
@@ -402,9 +399,8 @@
 					<p class="text2">
 						Photoshop<br>
 						HTML<br>
-						CSS / CSS3 / Flex CSS<br>
-						JavaScript / DOM / jQuery Plugins<br>
-						AJAX Data<br>
+						CSS / CSS3<br>
+						JavaScript / jQuery Plugins<br>
 					</p>
 				</div>
 				<div class="img"><img src="images/portfolio4_2.png" alt="포트폴리오4"></div>
