--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 				<div class="img"><img src="images/portfolio4_1.png" alt="포트폴리오4"></div>
 				<div class="text">
 					<p class="title">04 맥심 웹사이트</p>
-					<p class="sub"><span>PROJECT FEATURE</span>PC / Mobile HTML | <span>DATE</span>2019.05</p>
+					<p class="sub"><span>PROJECT FEATURE</span>PC HTML | <span>DATE</span>2019.05</p>
 					<p class="body">
 						맥심브랜드 PC 사이트 작업하였습니다.<br>
 						HTML, CSS 코딩 작업을 하였습니다.<br>
