--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 					<p class="title">01 페르마 웹사이트</p>
 					<p class="sub"><span>PROJECT FEATURE</span>PC / Mobile HTML | <span>DATE</span>2019.08</p>
 					<p class="body">
-						PC 및 MOBILE 사이트 작업하였습니다.<br>
-						HTML, CSS 코딩 작업을 하였습니다.<br>
+						PC 및 MOBILE 사이트 작업<br>
+						HTML, CSS 코딩을 하였고<br>
 						GNB, 슬라이드, 게시판 탭 스크립트를 작성하였습니다.<br>
 						메뉴들을 메인페이지에 배치하여 사용자가 쉽게 접근할 수 있도록 만들었습니다.
 					</p>
@@ -226,7 +226,7 @@
 					<p class="title">02 DOES 웹사이트</p>
 					<p class="sub"><span>PROJECT FEATURE</span>PC / Mobile HTML | <span>DATE</span>2019.09</p>
 					<p class="body">
-						원페이지로 반응형사이트를 구현하였습니다.<br>
+						원페이지로 반응형사이트를 구현<br>
 						HTML, CSS 및 Media Qeury를 사용하여 반응형 코딩 작업을 하였습니다.<br>
 						GNB와 탭메뉴 스크립트 작업을 하였습니다.<br>
 						고정 메뉴와 TOP 버튼을 만들어 사용자가 페이지를 쉽고 이동할 수 있도록 구현하였습니다.<br>
