--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 						<li>
 							<p class="sub_title">EXPERIENCE</p>
 							<p class="body">
+								<span>2019.12~2020.02</span>리얼웨이브<br>
 								<span>2019.07~2019.12</span>하나에이전시<br>
 								<span>2019.07~2019.12</span>UX/UI 웹디자인 수료<br>
-								<span>2017.03~2019.03</span>천안 페르마<br>
 							</p>
 						</li>
 						<li>
