--- a/index.html
+++ b/index.html
@@ -102,18 +102,11 @@
 							</p>
 						</li>
 						<li>
-							<p class="sub_title">EXPERIENCE</p>
-							<p class="body">
-								<span>2019.12~2020.02</span>리얼웨이브<br>
-								<span>2019.07~2019.12</span>하나에이전시<br>
-								<span>2019.07~2019.12</span>UX/UI 웹디자인 수료<br>
-							</p>
-						</li>
-						<li>
 							<p class="sub_title">EDUCATION</p>
 							<p class="body">
 								<span>2012.02</span>복자여자고등학교 졸업<br>
-								<span>2017.02</span>충남대학교 수학과 졸업
+								<span>2017.02</span>충남대학교 수학과 졸업<br>
+								<span>2019.07~2019.12</span>UX/UI 웹디자인 수료<br>
 							</p>
 						</li>
 						<li>
