--- a/index.html
+++ b/index.html
@@ -106,7 +106,14 @@
 							<p class="body">
 								<span>2012.02</span>복자여자고등학교 졸업<br>
 								<span>2017.02</span>충남대학교 수학과 졸업<br>
-								<span>2019.07~2019.12</span>UX/UI 웹디자인 수료<br>
+								<span>2019.12</span>UX/UI 웹디자인 수료<br>
+							</p>
+						</li>
+						<li>
+							<p class="sub_title">LICENSE</p>
+							<p class="body">
+								<span>2019.12</span>웹디자인기능사<br>
+								<span>2005.11</span>워드프로세서1급<br>
 							</p>
 						</li>
 						<li>
