--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							<p class="body">
 								<span>2012.02</span>복자여자고등학교 졸업<br>
 								<span>2017.02</span>충남대학교 수학과 졸업<br>
-								<span>2019.12</span>UX/UI 웹디자인 수료<br>
+								<span>2019.12</span>UX/UI 교육 수료<br>
 							</p>
 						</li>
 						<li>
