--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 						<li>
 							<p class="sub_title">SKILL</p>
 							<p class="body">
-								HTML5, CSS3, JAVASCRIPT<br>
-								PHOTOSHOP, ILLUSTRATOR<br>
+								HTML5, CSS3, JQuery,<br>
+								JAVASCRIPT, PHOTOSHOP<br>
 							</p>
 						</li>
 					</ul>
